--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "test": "echo 'test finished successfully'"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.19",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
-    "formik": "^2.4.5",
+    "formik": "^2.4.6",
     "modern-normalize": "^2.0.0",
     "nanoid": "^5.0.6",
     "overlayscrollbars": "^2.7.1",
     "overlayscrollbars-react": "^0.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^6.1.6",
     "react-number-format": "^5.3.4",
     "react-paginate": "^8.2.0",
@@ -31,6 +36,7 @@
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "sass": "^1.71.1",
+    "styled-components": "^6.1.11",
     "swiper": "^11.0.7",
     "vite-plugin-style-import": "^2.0.0",
     "yup": "^1.4.0"
