--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-date-pickers": "^7.6.2",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.6",
     "modern-normalize": "^2.0.0",
     "nanoid": "^5.0.6",
