--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-number-format": "^5.3.4",
     "react-paginate": "^8.2.0",
     "react-player": "^2.15.1",
+    "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
